--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="./src/stockfish_nnue_wasm/stockfish.js"></script>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
